--- a/public/stylesheets/clockstyle.css
+++ b/public/stylesheets/clockstyle.css
@@ -8,15 +8,12 @@
     font-weight: 200;
 }
 
-
-#info{
-    position: absolute;
-    top:50%;
-    left: 0; 
-    right: 0; 
-    margin-left: auto; 
-    margin-right: auto; 
-    margin-top:0;
-    padding-top: 10%;
-    width: 50%;
+#clockInfo{
+    padding-top:30px;
 }
+
+@media (max-width: 768px) {
+    #info{
+        top:50%;
+    }
+  }
